8260589: Crash in JfrTraceIdLoadBarrier::load(_jclass*)