src/hotspot/share/jfr/recorder/checkpoint/types/traceid/jfrTraceId.hpp
@@ -83,6 +83,7 @@ class JfrTraceId : public AllStatic {
   static void assign(const ModuleEntry* module);
   static void assign(const PackageEntry* package);
   static void assign(const ClassLoaderData* cld);
+  static traceid assign_primitive_klass_id();
   static traceid assign_thread_id();
 
   static traceid get(const Klass* klass);
@@ -91,7 +92,7 @@ class JfrTraceId : public AllStatic {
 
   // tag construct as used, returns pre-tagged traceid
   static traceid use(const Klass* klass);
-  static traceid use(jclass jc);
+  static traceid use(jclass jc, bool raw = false);
   static traceid use(const Method* method);
   static traceid use(const Klass* klass, const Method* method);
   static traceid use(const ModuleEntry* module);
