src/hotspot/share/jfr/recorder/checkpoint/types/traceid/jfrTraceIdLoadBarrier.cpp
@@ -76,5 +76,8 @@ traceid JfrTraceIdLoadBarrier::load(jclass jc) {
   assert(JavaThread::current()->thread_state() == _thread_in_vm, "invariant");
   const oop my_oop = JNIHandles::resolve(jc);
   assert(my_oop != NULL, "invariant");
+  if (java_lang_Class::is_primitive(my_oop)) {
+    return (traceid)java_lang_Class::primitive_type(my_oop);
+  }
   return load(java_lang_Class::as_Klass(my_oop));
 }
